allow processing of internal W3C schemas, fail if no relaxng schema is provided